fix: corrige ProdutoServiceTest